--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     environment:
       CC_TEST_REPORTER_ID: 8ec926841c6dfead9c848fd063c569e11b06be11442a8175d588e10607ee2150
     docker:
-      - image: cimg/php:7.3
+      - image: circleci/php:7-cli-node-browsers-legacy
     working_directory: ~/repo
     steps:
       - checkout
@@ -13,6 +13,7 @@ jobs:
           command: |
             sudo composer self-update
             composer install -n --prefer-dist
+            pecl install xdebug && docker-php-ext-enable xdebug
       - run:
           name: Setup Code Climate test-reporter
           command: |
@@ -23,5 +24,4 @@ jobs:
           command: |
             ./cc-test-reporter before-build
             vendor/bin/phpunit --testsuite all --coverage-clover clover.xml
-            ls -la
             ./cc-test-reporter after-build --coverage-input-type clover --exit-code $?
