--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     environment:
       CC_TEST_REPORTER_ID: 8ec926841c6dfead9c848fd063c569e11b06be11442a8175d588e10607ee2150
     docker:
-      - image: cimg/php:7.3
+      - image: circleci/php:7-cli-node-browsers-legacy
     working_directory: ~/repo
     steps:
       - checkout
@@ -13,7 +13,6 @@ jobs:
           command: |
             sudo composer self-update
             composer install -n --prefer-dist
-            sudo pecl channel-update pecl.php.net && sudo pecl install xdebug && docker-php-ext-enable xdebug
       - run:
           name: Setup Code Climate test-reporter
           command: |
