--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "getdkan/rooted-data",
+    "name": "getdkan/rooted-json-data",
     "description": "Access and modify JSON-based data objects while enforcing JSON Schema",
     "type": "library",
     "license": "GPL-3.0-or-later",
