--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "GPL-3.0-or-later",
     "require": {
         "opis/json-schema": "^1.0",
-        "galbar/jsonpath": "^1.1"
+        "galbar/jsonpath": "^1.1",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4"
