--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 vendor/
 .phpunit*
 .vscode/
+/.idea/codeStyles/codeStyleConfig.xml
+/composer.lock
+/.idea/modules.xml
+/.idea/php.xml
+/.idea/RootedJsonData.iml
+/.idea/vcs.xml
+/.idea/workspace.xml
