xdebug mode coverage.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     environment:
       CC_TEST_REPORTER_ID: 8ec926841c6dfead9c848fd063c569e11b06be11442a8175d588e10607ee2150
+      XDEBUG_MODE: coverage
     docker:
       - image: circleci/php:7-cli-node-browsers-legacy
     working_directory: ~/repo
