--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 vendor/
 .phpunit*
 .vscode/
-/.idea/
+/.idea/codeStyles/codeStyleConfig.xml
 /composer.lock
+/.idea/modules.xml
+/.idea/php.xml
+/.idea/RootedJsonData.iml
+/.idea/vcs.xml
+/.idea/workspace.xml
