--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
+        "rector/rector": "^0.15.19",
         "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
