--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,8 @@
 {
     "name": "getdkan/rooted-json-data",
     "description": "Access and modify JSON-based data objects while enforcing JSON Schema",
-    "type": "library",
     "license": "GPL-3.0-or-later",
-    "require": {
-        "opis/json-schema": "^1.0",
-        "galbar/jsonpath": "^1.1",
-        "ext-json": "*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.4"
-    },
-    "autoload": {
-        "psr-4": {
-            "RootedData\\": "src/",
-            "RootedDataTest\\": "tests/"
-        }
-    },
+    "type": "library",
     "authors": [
         {
             "name": "fmizzell",
@@ -26,6 +12,32 @@
             "name": "Dan Feder",
             "email": "dafeder@mailbox.org"
         }
-
-    ]
+    ],
+    "require": {
+        "ext-json": "*",
+        "galbar/jsonpath": "^1.1",
+        "opis/json-schema": "^1.0.8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.4",
+        "rector/rector": "^0.15.19",
+        "squizlabs/php_codesniffer": "^3.7"
+    },
+    "autoload": {
+        "psr-4": {
+            "RootedData\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "RootedDataTest\\": "tests/"
+        }
+    },
+    "scripts": {
+        "phpcbf": "./vendor/bin/phpcbf",
+        "phpcs": "./vendor/bin/phpcs",
+        "rector": "./vendor/bin/rector process",
+        "rector-dry-run": "./vendor/bin/rector process --dry-run",
+        "test": "./vendor/bin/phpunit --testsuite all"
+    }
 }
