--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,4 @@
-version: 2
+version: "2"
 plugins:
   phpcodesniffer:
     enabled: true
@@ -14,3 +14,4 @@ exclude_patterns:
  - ".circleci/"
  - ".gitignore"
  - "docs/"
+ - "tests/"
