--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9.4",
         "rector/rector": "^0.15.19",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "symfony/phpunit-bridge": "^7.0"
     },
     "autoload": {
         "psr-4": {
