--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "ext-json": "*",
         "galbar/jsonpath": "^3.0",
-        "opis/json-schema": "^1.0.8"
+        "opis/json-schema": "^1.0.8",
+        "justinrainbow/json-schema": "6.0.0-beta"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
